# bv_helper

./: .clang-format  .cmake-format  CMakeLists.txt  Main.cpp  README.md  build.sh  conanfile.py  settings_context.json
application/: CMakeLists.txt
application/domain/: CMakeLists.txt
application/domain/api/: CMakeLists.txt
application/domain/src/: CMakeLists.txt
application/domain/src/SettingsManagement/: MainMenu.cpp  Setting.cpp  SettingId.cpp  SettingMenuBase.cpp  SettingsContext.cpp  SettingsManager.cpp  SubMenu.cpp
application/gui/: CMakeLists.txt
application/gui/inc/: CMakeLists.txt
application/gui/res/: main.qrc  qtquickcontrols2.conf
application/gui/res/components/: HeaderBar.qml
application/gui/res/stateMachine/: GuiStateMachine.scxml
application/gui/res/views/: MainWindow.qml  TeamProfile.qml  UserProfile.qml  Welcome.qml
application/gui/src/: CMakeLists.txt
application/gui/src/Activities/: ActivitiesGitHubViewModel.cpp  ActivitiesJiraViewModel.cpp
application/gui/src/Common/: BaseViewModel.cpp  BaseViewModelDependencies.cpp  ProfileCategoryListModel.cpp  ProfileListModel.cpp
application/gui/src/Core/: GuiApplication.cpp  HeaderBarModel.cpp  Main.cpp
application/gui/src/GithubActivities/: GithubActivitiesViewModel.cpp
application/gui/src/JiraActivites/: JiraActivitesViewModel.cpp
application/gui/src/MainWindow/: MainWindowViewModel.cpp
application/gui/src/Reports/: ReportsGenerateViewModel.cpp  ReportsPreGenerateViewModel.cpp
application/gui/src/Settings/: SettingsMainMenuViewModel.cpp  SettingsSubMenuViewModel.cpp
application/gui/src/TeamProfile/: TeamProfileViewModel.cpp
application/gui/src/UserProfile/: UserProfileViewModel.cpp
application/gui/src/ViewManagement/: ViewContext.cpp  ViewManager.cpp
application/gui/src/Welcome/: WelcomeViewModel.cpp
application/inc/: CMakeLists.txt
application/inc/Application/Appliance/: GuiApplication.hpp
application/inc/Application/Common/: BaseViewModel.hpp  BaseViewModelDependencies.hpp  ProfileCategory.hpp  ProfileCategoryListModel.hpp  ProfileItem.hpp  ProfileListModel.hpp
application/inc/Application/Core/: GuiApplication.hpp  HeaderBarModel.hpp
application/inc/Common/: BaseViewModel.hpp  ProfileCategoryListModel.hpp  ProfileItem.hpp
application/inc/TeamProfile/: TeamProfileViewModel.hpp
application/inc/UserProfile/: UserProfileViewModel.hpp
application/res/: main.qrc
application/res/components/: AddPRojectDialog.qml  HeaderBar.qml  ListViewCategoryDelegate.qml  ProfileListView.qml  SettingMainMenu.qml  SettingSubMenu.qml
application/res/stateMachine/: GuiStateMachine.scxml
application/res/views/: GithubActivities.qml  MainWindow.qml  TeamProfile.qml  UserProfile.qml
application/src/: CMakeLists.txt
application/src/Appliance/: GuiApplication.cpp  HeaderBarModel.cpp  Main.cpp
application/src/Common/: BaseViewModel.cpp  BaseViewModelDependencies.cpp  ProfileCategoryListModel.cpp  ProfileListModel.cpp
application/src/Core/: GuiApplication.cpp  HeaderBarModel.cpp  Main.cpp
application/src/GithubActivities/: GithubActivitiesViewModel.cpp
application/src/JiraActivites/: JiraActivitesViewModel.cpp
application/src/MainWindow/: MainWindowViewModel.cpp
application/src/Services/: SettingsManager.cpp
application/src/SettingsManagement/: SettingsDatabase.cpp  SettingsDatabaseDriver.cpp  SettingsManager.cpp
application/src/TeamProfile/: TeamProfileViewModel.cpp
application/src/UserProfile/: UserProfileViewModel.cpp
application/src/ViewManagement/: ViewContext.cpp  ViewManager.cpp
framework/: CMakeLists.txt
framework/api/: CMakeLists.txt
framework/api/ViewManagement/: ViewManager.hpp
framework/res/: CMakeLists.txt  StackViewBridge.qml  StackViewFake.qml  framework.qrc
framework/src/: CMakeLists.txt
framework/src/StateMachine/: DataModel.cpp  GuiStateMachine.cpp
framework/src/ViewManagement/: AppView.cpp  AppViewConfiguration.cpp  AppWindow.cpp  AppWindowConfiguration.cpp  MainWindow.cpp  MainWindowConfiguration.cpp  StackViewDriver.cpp  View.cpp  ViewConfiguration.cpp  ViewManager.cpp  ViewManagerConfiguration.cpp  ViewModel.cpp  Window.cpp  WindowConfiguration.cpp
inc/: CMakeLists.txt
res/: main.qrc  (+7 more)
(+84 files in other folders)
